# museums

./: .gitignore  README.md  annotate_nominatum.py  annotate_timestamps.py  build.sh  combine_museums.py  fetch_photo_metadata.py  load_photo_metadata.py  metadata.json  metadata.yaml  museums.yaml  nominatum_annotate.py  pyproject.toml  requirements.txt  serve.sh  set-country.sql  split_museums.py
.circleci/: config.yml
museums/: 1.yaml  10.yaml  100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  11.yaml  110.yaml  111.yaml  112.yaml  113.yaml  114.yaml  115.yaml  116.yaml  117.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  2.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml  26.yaml  27.yaml  28.yaml  29.yaml  (+76 more)
photos-metadata/: Coutellerie-Nontronnaise-1.jpeg.json  Coutellerie-Nontronnaise-10.jpeg.json  Coutellerie-Nontronnaise-11.jpeg.json  Coutellerie-Nontronnaise-12.jpeg.json  Coutellerie-Nontronnaise-13.jpeg.json  Coutellerie-Nontronnaise-2.jpeg.json  Coutellerie-Nontronnaise-3.jpeg.json  Coutellerie-Nontronnaise-4.jpeg.json  Coutellerie-Nontronnaise-5.jpeg.json  Coutellerie-Nontronnaise-6.jpeg.json  Coutellerie-Nontronnaise-7.jpeg.json  Coutellerie-Nontronnaise-8.jpeg.json  Coutellerie-Nontronnaise-9.jpeg.json  Griffith-Observatory.jpg.json  IMG_0353.jpeg.json  IMG_0859.jpeg.json  IMG_1254.jpeg.json  IMG_1606.JPG.json  IMG_1799.jpeg.json  IMG_3817.jpeg.json  IMG_4205.jpeg.json  IMG_4248.jpeg.json  IMG_4921.jpeg.json  Recoleta-Cemetery.jpg.json  alverstone-mead-1.jpg.json  (+779 more)
(+21 files in other folders)
